Archive2/88/8d8f68c50c9412/output
main.cpp:2:8: error: explicit specialization of non-template struct 'OuterInner'
struct OuterInner<T, U> {};
       ^         ~~~~~~
1 error generated.
